Home section mobile-layout fixes

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -109,6 +109,10 @@
 }
 
 @media (max-width: 980px) {
+  .home {
+    padding: 50px;
+  }
+
   .home__wrapper {
     flex-direction: column-reverse;
   }
@@ -121,8 +125,21 @@
     align-items: center;
   }
 
+  .home-info h1 {
+    font-size: 45px;
+  }
+
   .media-icons {
     flex-direction: row;
     gap: 50px;
+  }
+
+  .circle {
+    height: 250px;
+    width: 250px;
+  }
+
+  .scroll-down {
+    margin: 50px auto 0;
   }
 }
